<resources>
    <string name="app_name">Career Center</string>
    <string name="log_on">Log On</string>
    <string name="sign_up">Sign Up</string>
    <string name="sheridan_logo">Sheridan Logo</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string-array name="arrays">
        <item>Tell Me about yourself</item>
        <item>Why do you think we should hire you</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
</resources>
