<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in_log_on"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="quadcore.androidapplication.SignInLogOn">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/shertag"
        android:id="@+id/SherTag"
        android:contentDescription="@string/sheridan_logo"/>

    <Button
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SherTag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:id="@+id/button"

        android:background="@drawable/roundcorners"/>

    <Button
        android:id="@+id/logOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_below="@+id/button"
        android:layout_marginTop="52dp"
        android:background="@drawable/roundcorners"
        android:onClick="Log"
        android:text="@string/log_on"/>
</RelativeLayout>
