<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/shertag"
        android:layout_marginTop="14dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/Password"
        android:layout_alignStart="@+id/Password"/>

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UserName"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_alignLeft="@+id/LogIn"
        android:layout_alignStart="@+id/LogIn"/>

    <Button
        android:id="@+id/LogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundcorners"
        android:onClick="LogIn"
        android:text="@string/log_on"
        android:layout_below="@+id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Password"
        android:layout_alignBottom="@+id/Password"
        android:layout_centerInParent="false"
        android:text="@string/password"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_toLeftOf="@+id/Password"
        android:layout_toStartOf="@+id/Password"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/UserName"
        android:layout_alignBottom="@+id/UserName"
        android:layout_centerInParent="false"
        android:layout_toLeftOf="@+id/UserName"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>